added simple random movement